<?xml version="1.0"?>
<package>
  <name>ros_depthsense_camera</name>
  <version>0.1.0</version>
  <description>ROS Package to connect to SoftKinetic DepthSense cameras</description>

  <author email="myzhar@robot-home.it">Walter 'Myzhar' Lucetti</author>

  <maintainer email="myzhar@robot-home.it">Walter 'Myzhar' Lucetti</maintainer>

  <license>LGPL v3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>image_transport</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>image_transport</run_depend>
</package>
